--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
-CLIENT_ID = CHANGE_ME
-CLIENT_SECRET = CHANGE_ME
+SPOTIFY_CLIENT_ID=CHANGE_ME
+SPOTIFY_CLIENT_SECRET=CHANGE_ME
+REDIRECT_URI=CHANGE_ME
