--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Test Spotify API app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [
     "spotify"
   ],
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.15.4",
+    "querystring": "^0.2.0",
+    "request": "^2.81.0"
+  },
   "author": "Chris",
   "license": "MIT"
 }
