spotify api init

--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "spotify-api",
   "version": "1.0.0",
-  "description": "Test Spotify API app",
+  "description": "",
   "main": "index.js",
+  "dependencies": {},
+  "devDependencies": {
+    "concurrently": "^5.0.2"
+  },
   "scripts": {
-    "start": "node server.js"
+    "serve": "npm run start --prefix server",
+    "client": "npm run start --prefix spotify-app",
+    "dev": "concurrently \"npm run serve\" \"npm run client\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "spotify"
-  ],
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.15.4",
-    "querystring": "^0.2.0",
-    "request": "^2.81.0"
-  },
-  "author": "Chris",
-  "license": "MIT"
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
